first try fixin

--- a/liferay-6.2/Dockerfile
+++ b/liferay-6.2/Dockerfile
@@ -12,18 +12,17 @@ ENV PATH=$JAVA_HOME/bin:$M2_HOME/bin:$PATH
 
 # install liferay
 RUN curl -O -s -k -L -C - http://downloads.sourceforge.net/project/lportal/Liferay%20Portal/6.2.5%20GA6/liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip \
-	&& unzip liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip -d /opt \
+	&& unzip liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip -d /home/user \
 	&& rm liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip
 # add config for bdd
-RUN /bin/echo -e '\nCATALINA_OPTS="$CATALINA_OPTS -Dexternal-properties=portal-bd-${DB_TYPE}.properties"' >> /opt/liferay-portal-6.2-ce-ga6/tomcat-7.0.62/bin/setenv.sh
+RUN /bin/echo -e '\nCATALINA_OPTS="$CATALINA_OPTS -Dexternal-properties=portal-bd-${DB_TYPE}.properties"' >> /home/user/liferay-portal-6.2-ce-ga6/tomcat-7.0.62/bin/setenv.sh
 # add configuration liferay file 
 ADD lep/portal-bundle.properties /opt/liferay-portal-6.2-ce-ga6/portal-bundle.properties
 ADD lep/portal-bd-MYSQL.properties /opt/liferay-portal-6.2-ce-ga6/portal-bd-MYSQL.properties
 ADD lep/portal-bd-POSTGRESQL.properties /opt/liferay-portal-6.2-ce-ga6/portal-bd-POSTGRESQL.properties
 # volumes
-VOLUME ["/var/liferay-home", "/opt/liferay-portal-6.2-ce-ga6/"]
+VOLUME ["/var/liferay-home", "/home/user/liferay-portal-6.2-ce-ga6/"]
 
 RUN mkdir /home/user/tomcat8 /home/user/apache-maven-$MAVEN_VERSION && \
-    wget -qO- "http://apache.ip-connect.vn.ua/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz" | tar -zx --strip-components=1 -C /home/user/apache-maven-$MAVEN_VERSION/ && \
-    rm -rf /home/user/tomcat8/webapps/* && \
+    wget -qO- "http://apache.ip-connect.vn.ua/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz" | tar -zx --strip-components=1 -C /home/user/apache-maven-$MAVEN_VERSION/ && \    
 echo "export MAVEN_OPTS=\$JAVA_OPTS" >> /home/user/.bashrc
