location of portal properties fixed

--- a/liferay-6.2/Dockerfile
+++ b/liferay-6.2/Dockerfile
@@ -8,20 +8,21 @@ ENV MAVEN_VERSION=3.3.9 \
     TOMCAT_HOME=/home/user/tomcat8 \
     TERM=xterm
 ENV M2_HOME=/home/user/apache-maven-$MAVEN_VERSION
+ENV USER_HOME=/home/user
 ENV PATH=$JAVA_HOME/bin:$M2_HOME/bin:$PATH
 
 # install liferay
 RUN cd /home/user && curl -O -s -k -L -C - http://downloads.sourceforge.net/project/lportal/Liferay%20Portal/6.2.5%20GA6/liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip \
-    && unzip liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip -d /home/user \
+    && unzip liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip -d $USER_HOME \
     && sudo rm liferay-portal-tomcat-6.2-ce-ga6-20160112152609836.zip && cd -
 # add config for bdd
-RUN /bin/echo -e '\nCATALINA_OPTS="$CATALINA_OPTS -Dexternal-properties=portal-bd-${DB_TYPE}.properties"' >> /home/user/liferay-portal-6.2-ce-ga6/tomcat-7.0.62/bin/setenv.sh
+RUN /bin/echo -e '\nCATALINA_OPTS="$CATALINA_OPTS -Dexternal-properties=portal-bd-${DB_TYPE}.properties"' >> $USER_HOME/liferay-portal-6.2-ce-ga6/tomcat-7.0.62/bin/setenv.sh
 # add configuration liferay file 
-ADD lep/portal-bundle.properties /opt/liferay-portal-6.2-ce-ga6/portal-bundle.properties
-ADD lep/portal-bd-MYSQL.properties /opt/liferay-portal-6.2-ce-ga6/portal-bd-MYSQL.properties
+ADD lep/portal-bundle.properties $USER_HOME/liferay-portal-6.2-ce-ga6/portal-bundle.properties
+ADD lep/portal-bd-MYSQL.properties $USER_HOME/liferay-portal-6.2-ce-ga6/portal-bd-MYSQL.properties
 #ADD lep/portal-bd-POSTGRESQL.properties /opt/liferay-portal-6.2-ce-ga6/portal-bd-POSTGRESQL.properties
 
-ENV LIFERAY_HOME=/home/user/liferay-portal-6.2-ce-ga6
+ENV LIFERAY_HOME=$USER_HOME/liferay-portal-6.2-ce-ga6
 
 
 # volumes
