fixed liferay home

--- a/liferay-6.2/lep/portal-bundle.properties
+++ b/liferay-6.2/lep/portal-bundle.properties
@@ -1,5 +1,5 @@
 setup.wizard.enabled=false
 browser.launcher.url=
-liferay.home=/var/liferay-home
+liferay.home=/home/user/liferay-portal-6.2-ce-ga6
 
-include-and-override=/var/liferay-home/portal-ext.properties
+include-and-override=/home/user/liferay-portal-6.2-ce-ga6/portal-ext.properties
